More changes for Java 8 compatibility. Better indentation/formatting support for binary and ternary expressions.